--- a/src/sass/layouts/_l-active-tours.scss
+++ b/src/sass/layouts/_l-active-tours.scss
@@ -35,8 +35,8 @@
     width: auto;
     font-size: 18px;
     text-align: center;
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 10px;
+    padding-right: 10px;
 
     .href_detail {
       padding: 10px 10px;
