--- a/carpatianknights/front_end/templates/base.html
+++ b/carpatianknights/front_end/templates/base.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <head>
-    <title>{% block title %}{% endblock %}</title>
-
+    <title>{% block title %}Carpatianknights{% endblock %}</title>
+    <link type="image/x-icon" rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
     <link type="text/css" href="{% static 'index.css' %}" rel="stylesheet">
 </head>
 <body>
