--- a/carpatianknights/news/templates/news/post/list.html
+++ b/carpatianknights/news/templates/news/post/list.html
@@ -34,7 +34,7 @@
 
                 </form>
             </div>
-            <div class="container pr-sm-3">
+            <div class="container">
                 <div class="row gy-5 justify-content-center mb-5">
                     {% for post in posts %}
                         <div class="col-lg-5 col-md-12 col-sm-12 mx-lg-3">
@@ -45,9 +45,9 @@
                                     {{ post.body|markdown|truncatewords_html:45 }}
                                     <p class="text-dark">{{ post.author }}</p>
                                 </div>
-                                <button class="btn button_news" id="{{ post.id }}">
-                                    <a href="{{ post.get_absolute_url }}">Детальніше</a>
-                                </button>
+{#                                <button class="btn" id="{{ post.id }}">#}
+{#                                    <a href="{{ post.get_absolute_url }}">Детальніше</a>#}
+{#                                </button>#}
                                 <div class="news-tag-container">
                                     Tags:
                                     {% for tag in post.tags.all %}
@@ -57,6 +57,9 @@
                                         {% if not forloop.last %}{% endif %}
                                     {% endfor %}
                                 </div>
+                                <button class="btn" id="{{ post.id }}">
+                                    <a href="{{ post.get_absolute_url }}">Детальніше</a>
+                                </button>
                             </div>
                         </div>
                     {% endfor %}
