--- a/carpatianknights/route/templates/route/route.html
+++ b/carpatianknights/route/templates/route/route.html
@@ -11,16 +11,12 @@
                         <h3>{{ route.name }}</h3>
                         <p>Сладність: {{ route.complexity }}</p>
                         <div class="active_tour_description">{{ route.short_description|markdown }}</div>
-{#                        <div class="active_tour_image">#}
-{#                            {% for route_image in route.photos.all %}#}
-{#                                <img src="{{ route_image.image.url }}" alt="">#}
-{#                            {% endfor %}#}
-{#                        </div>#}
                     </div>
-                    <div class="col-12">
-                        <button class="button_register btn btn-secondary">
-                            <a class="href_register" href="{{ route.get_absolute_url }}">Детальніше</a>
-                        </button>
+                    <div class="row justify-content-lg-end justify-content-sm-center">
+                        <div class="col-lg-4 col-sm-10">
+                            <a class="href_register btn btn-secondary w-100"
+                               href="{{ route.get_absolute_url }}">Детальніше</a>
+                        </div>
                     </div>
                 </div>
 
