--- a/src/sass/layouts/_l-header.scss
+++ b/src/sass/layouts/_l-header.scss
@@ -1,4 +1,5 @@
 header {
+  display: flex;
   width: 100%;
   height: 50px;
   position: absolute;
@@ -45,6 +46,8 @@ body.open-menu {
     transform: translateY(0);
   }
 }
+
+
 
 
 
