--- a/src/sass/modules/_m-hamburger.scss
+++ b/src/sass/modules/_m-hamburger.scss
@@ -4,6 +4,7 @@
   top: 50px;
   left: 50px;
   z-index: 1000;
+
   &::after {
     content: '';
 
@@ -63,4 +64,18 @@
 .hamburger.open span:nth-child(3) {
   top: 10px;
   transform: rotate(-135deg);
+}
+
+@media only screen and (max-width: 600px) {
+  .hamburger-container {
+    position: fixed;
+    top: 40px;
+    left: 10px;
+    z-index: 1000;
+
+    &::after {
+      content: '';
+
+    }
+  }
 }
