--- a/src/sass/modules/_m-page-headers.scss
+++ b/src/sass/modules/_m-page-headers.scss
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: center;
   align-content: center;
+
   ::after {
     content: '';
     position: absolute;
@@ -16,8 +17,15 @@
     border-bottom: 5vh solid transparent;
     border-left: 100vw solid $main-bg-color;
   }
+
   h2 {
     color: white;
     margin-top: 30px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  header {
+    display: none !important;
   }
 }
