--- a/src/sass/modules/_m-page-headers.scss
+++ b/src/sass/modules/_m-page-headers.scss
@@ -28,4 +28,13 @@
   header {
     display: none !important;
   }
+
+  .headers-container {
+    height: auto;
+
+    h2 {
+      padding-left: 50px;
+    }
+  }
+
 }
