--- a/carpatianknights/news/templates/news/post/list.html
+++ b/carpatianknights/news/templates/news/post/list.html
@@ -45,9 +45,6 @@
                                     {{ post.body|markdown|truncatewords_html:45 }}
                                     <p class="text-dark">{{ post.author }}</p>
                                 </div>
-{#                                <button class="btn" id="{{ post.id }}">#}
-{#                                    <a href="{{ post.get_absolute_url }}">Детальніше</a>#}
-{#                                </button>#}
                                 <div class="news-tag-container">
                                     Tags:
                                     {% for tag in post.tags.all %}
@@ -57,9 +54,7 @@
                                         {% if not forloop.last %}{% endif %}
                                     {% endfor %}
                                 </div>
-                                <button class="btn" id="{{ post.id }}">
-                                    <a href="{{ post.get_absolute_url }}">Детальніше</a>
-                                </button>
+                                <a id="{{ post.id }}" class="btn button-news" href="{{ post.get_absolute_url }}">Детальніше</a>
                             </div>
                         </div>
                     {% endfor %}
