--- a/src/sass/layouts/_l-news-block.scss
+++ b/src/sass/layouts/_l-news-block.scss
@@ -68,7 +68,7 @@
       overflow: hidden;
     }
 
-    button {
+    .button-news {
       position: absolute;
       width: 110px;
       height: 40px;
@@ -76,12 +76,12 @@
       left: -20px;
       background-color: $main-bg-color;
       transition: background-color .4s ease-in-out, color .4s ease-in-out;
+      text-decoration: none;
+      color: white;
+    }
 
-      a {
-        text-decoration: none;
-        color: white;
-
-      }
+    .button-news:hover {
+      opacity: 0.85;
     }
 
     picture {
@@ -117,6 +117,10 @@
         width: 50px;
         white-space: nowrap;
       }
+
+      .news-tag:hover {
+        background-color: white;
+      }
     }
 
     a {
@@ -147,7 +151,7 @@
         padding: 15px 30px;
       }
 
-      button {
+      .button-news {
         margin-top: 10px;
         position: relative;
         width: auto;
