--- a/carpatianknights/front_end/templates/homepage/about-us.html
+++ b/carpatianknights/front_end/templates/homepage/about-us.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col">
 
-                <h2 class="text-center text-white h-title">Про <span>нас</span></h2>
+                <h2 class="text-center text-white h-title"><span>Про нас</span></h2>
 
                 <p class="text-justify text-white">Вас вітають Карпатські Відчайдухи! Територія вільних людей, закоханих в
                     гори. Запрошуємо вас
