--- a/carpatianknights/front_end/templates/main.html
+++ b/carpatianknights/front_end/templates/main.html
@@ -6,6 +6,7 @@
 
     {% include 'homepage/hero-banner.html' %}
     {% include 'homepage/about-us.html' %}
+    {% include 'homepage/social.html' %}
 {#    {% include 'homepage/our-partners.html' %}#}
 {#    {% include 'homepage/statistic.html' %}#}
     {% include 'homepage/carousel.html' %}
