--- a/carpatianknights/front_end/templates/base.html
+++ b/carpatianknights/front_end/templates/base.html
@@ -20,6 +20,8 @@
         </main>
     </div>
 
+    {% block include_content %}{% endblock %}
+
     <div class="hamburger-container">
         <div class="hamburger">
             <span></span>
