--- a/carpatianknights/route/templates/route/active_tours.html
+++ b/carpatianknights/route/templates/route/active_tours.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 {% load active_tour_tags %}
 {% load static %}
+
+{% block title %}
+    Актуальні походи
+{% endblock %}
+
 {% block content %}
     <div class="headers-container"><h2>Актуальні походи</h2></div>
     <div class="active-tours-container">
