--- a/src/sass/layouts/_l-news-detail.scss
+++ b/src/sass/layouts/_l-news-detail.scss
@@ -2,7 +2,9 @@
   background-color: rgba(52, 58, 64, 0.6);
   color: white;
   padding-bottom: 50px;
-  h1{
+  min-height: 100vh;
+
+  h1 {
     margin-bottom: 50px;
     padding-top: 40px;
   }
