--- a/src/sass/modules/_m-hamburger.scss
+++ b/src/sass/modules/_m-hamburger.scss
@@ -30,7 +30,7 @@
     height: 4px;
     width: 100%;
     //background: #006666;
-    background-color: white;
+    background-color: #ffffff;
     border-radius: 3px;
     opacity: 1;
     left: 0;
