--- a/carpatianknights/news/templates/news/post/detail.html
+++ b/carpatianknights/news/templates/news/post/detail.html
@@ -13,11 +13,11 @@
             <h1 class="text-center ">{{ post.title }}</h1>
             <p class="date">Опубліковано: {{ post.publish|date:'d.m.Y' }}. Автор - {{ post.author.first_name }} {{ post.author.last_name }}</p>
             {{ post.body|markdown }}
-            <div class="row gy-4 justify-content-center">
+            <div class="row gy-4 justify-content-center" id="lightgallery">
                 {% for post_photo in post.photos.all %}
-                    <div class="col-lg-4 col-md-6 col-sm-12">
+                    <a class="col-lg-4 col-md-6 col-sm-12" href="{{ post_photo.image.url }}">
                         <img class="img-fluid" src="{{ post_photo.image.url }}" alt="">
-                    </div>
+                    </a>
                 {% endfor %}
             </div>
         </div>
