--- a/carpatianknights/route/templates/route/route_detail.html
+++ b/carpatianknights/route/templates/route/route_detail.html
@@ -11,11 +11,11 @@
             <h1 class="text-center ">{{ route.name }}</h1>
             <p>Сладність: {{ route.complexity }}</p>
             {{ route.description|markdown }}
-            <div class="row gy-4 justify-content-center">
+            <div class="row gy-4 justify-content-center" id="lightgallery">
                 {% for route_image in route.photos.all %}
-                    <div class="col-lg-4 col-md-6 col-sm-12">
+                    <a class="col-lg-4 col-md-6 col-sm-12" href="{{ route_image.image.url }}">
                         <img class="img-fluid" src="{{ route_image.image.url }}" alt="">
-                    </div>
+                    </a>
                 {% endfor %}
             </div>
         </div>
