add content style

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -19,6 +19,7 @@
 @import "modules/m-social-icons";
 @import "modules/m-carousel-section";
 @import "modules/m-hamburger";
+@import "modules/m-content-style";
 
 //Main page
 @import "layouts/l-header-banner";
