add head title background on pages and small fix

--- a/carpatianknights/account/templates/account/dashboard.html
+++ b/carpatianknights/account/templates/account/dashboard.html
@@ -6,8 +6,8 @@
 {% block account_content %}
 
 
-    <div class="container my-5 py-5">
-        <div class="row justify-content-center gy-3">
+    <div class="container my-5 py-5 news-margin">
+        <div class="row justify-content-center gy-3 mt-5">
             <div class="col-md-7 col-sm-12 dashboard-background">
                 <div class="confirm_tours">
                     <h2 class="text-center">Зарєстровані Маршрути</h2>
