--- a/carpatianknights/front_end/templates/base.html
+++ b/carpatianknights/front_end/templates/base.html
@@ -14,6 +14,7 @@
 
     {% include 'shared/_header.html' %}
 
+    {% block header_content %}{% endblock %}
     <div class="perspective-container">
         <main class="main">
             {% block content %}{% endblock %}
