--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -44,5 +44,6 @@
 
 //include content
 @import "layouts/l-back-arrow";
+@import "layouts/l-title-background";
 
 @import "node_modules/lightgallery.js/src/sass/lightgallery";
