--- a/carpatianknights/account/templates/account_base.html
+++ b/carpatianknights/account/templates/account_base.html
@@ -1,8 +1,13 @@
 {% extends "base.html" %}
 {% load static %}
+
+{% block header_content %}
+        <div class="headers-container"><h2>{% block title %}{% endblock %}</h2></div>
+{% endblock %}
+
 {% block content %}
-    <div class="headers-container"><h2>{% block title %}{% endblock %}</h2>
-    </div>
+{#    <div class="headers-container"><h2></h2>#}
+{#    </div>#}
     {% if messages %}
         <div class="alert alert-danger alert-dismissible fade show mt-5" role="alert">
             {% for message in messages %}
@@ -17,7 +22,6 @@
     {% if form.errors %}
         <div class="alert alert-danger alert-dismissible fade show mt-5" role="alert">
             <div class="text-center fs-4">
-{#                <p>Неправельний логін або пароль</p>#}
                 {{ form.errors }}
             </div>
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" onclick="closeALert(this)"></button>
