--- a/carpatianknights/route/templates/route/route_detail.html
+++ b/carpatianknights/route/templates/route/route_detail.html
@@ -8,7 +8,7 @@
 {% block content %}
     <div class="route-detail-container">
         <div class="container">
-            <h1 class="text-center ">{{ route.name }}</h1>
+            <h1 class="text-center title-background-lg">{{ route.name }}</h1>
             <p>Сладність: {{ route.complexity }}</p>
             {{ route.description|markdown }}
             <div class="row gy-4 justify-content-center" id="lightgallery">
@@ -25,4 +25,5 @@
 
 {% block include_content %}
     {% include 'shared/_back_arrow.html' %}
+    {% include 'shared/_title-background.html' %}
 {% endblock %}
