--- a/src/sass/layouts/_l-news-detail.scss
+++ b/src/sass/layouts/_l-news-detail.scss
@@ -8,4 +8,12 @@
     margin-bottom: 50px;
     padding-top: 40px;
   }
+
+}
+
+@media only screen and (max-width: 600px) {
+  .news-detail-container{
+    margin-top: 100px;
+    padding-top: 30px;
+  }
 }
