add open in new tab to social icon

--- a/carpatianknights/front_end/templates/homepage/social.html
+++ b/carpatianknights/front_end/templates/homepage/social.html
@@ -2,7 +2,7 @@
 
 <article class="icons-container">
     <div class="icons">
-        <a href="https://t.me/carpatianknights">
+        <a target="_blank" href="https://t.me/carpatianknights">
             <img src="{% static 'images/telegram.svg' %}" alt="Telegram"/>
             <span class="hover-container spin-top">
                 <span class="top-cone"></span>
@@ -13,7 +13,7 @@
                 <span class="bottom-cone"></span>
             </span>
         </a>
-        <a href="https://www.facebook.com/carpatianknights">
+        <a target="_blank" href="https://www.facebook.com/carpatianknights">
             <img src="{% static 'images/facebook.svg' %}" alt="Facebook"/>
             <span class="hover-container spin-top">
                 <span class="top-cone"></span>
@@ -24,7 +24,7 @@
                 <span class="bottom-cone"></span>
             </span>
         </a>
-        <a href="https://www.instagram.com/explore/tags/carpatianknights/">
+        <a target="_blank" href="https://www.instagram.com/explore/tags/carpatianknights/">
             <img src="{% static 'images/instagram.svg' %}" alt="Instagram"/>
             <span class="hover-container spin-top">
                 <span class="top-cone"></span>
