change site photo

--- a/carpatianknights/route/templates/route/route.html
+++ b/carpatianknights/route/templates/route/route.html
@@ -12,8 +12,8 @@
 
 {% block content %}
 
-    <div class="active-tours-container news-margin">
-        <div class="container">
+    <div class="active-tours-container">
+        <div class="container news-margin">
             {% for route in route_list %}
                 <div class="tour-card row">
                     <div class="col-12">
