--- a/carpatianknights/route/templates/route/active_tours.html
+++ b/carpatianknights/route/templates/route/active_tours.html
@@ -11,9 +11,8 @@
 {% endblock %}
 
 {% block content %}
-{#    <div class="headers-container"><h2>Актуальні походи</h2></div>#}
-    <div class="active-tours-container news-margin">
-        <div class="container">
+    <div class="active-tours-container">
+        <div class="container news-margin">
             {% for active_tour in active_tour_list %}
                 <div class="tour-card row">
                     <div class="col-12">
