--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -62,7 +62,7 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  background: url("../images/banner-bg.jpg") fixed center / cover;
+  background: url("../images/main_bg.jpg") fixed center / cover;
   backface-visibility: hidden;
 }
 
