--- a/carpatianknights/account/templates/account_base.html
+++ b/carpatianknights/account/templates/account_base.html
@@ -6,10 +6,9 @@
 {% endblock %}
 
 {% block content %}
-{#    <div class="headers-container"><h2></h2>#}
-{#    </div>#}
+
     {% if messages %}
-        <div class="alert alert-danger alert-dismissible fade show mt-5" role="alert">
+        <div class="alert alert-danger alert-dismissible fade show margin-err" role="alert">
             {% for message in messages %}
                 <div class="{{ message.tags }} text-center fs-4">
                     {{ message|safe }}
@@ -20,7 +19,7 @@
 
     {% endif %}
     {% if form.errors %}
-        <div class="alert alert-danger alert-dismissible fade show mt-5" role="alert">
+        <div class="alert alert-danger alert-dismissible fade show margin-err" role="alert">
             <div class="text-center fs-4">
                 {{ form.errors }}
             </div>
