--- a/src/sass/layouts/_l-account-login.scss
+++ b/src/sass/layouts/_l-account-login.scss
@@ -1,9 +1,14 @@
 .login-form{
-  margin-top: 50px;
+  margin-top: 100px;
   padding: 25px;
   background-color: $main-bg-color;
   border-radius: 10px;
   label, p, a{
     color: white;
   }
+}
+
+.margin-err{
+  margin-top: 125px;
+  z-index: 3;
 }
