fix account title and account margin

--- a/carpatianknights/account/templates/registration/logged_out.html
+++ b/carpatianknights/account/templates/registration/logged_out.html
@@ -3,7 +3,7 @@
 {% block title %}Вихід з аккаунта{% endblock %}
 
 {% block account_content %}
-    <div class="container mt-5 pt-5">
+    <div class="container account-margin">
         <h1 class="text-center text-white">Вихід з аккаунта</h1>
         <h2 class="text-white text-center">Ви вийшли з аккаунта ви можете знову війти за посиланням:
             <a class="text-white" href="{% url 'login' %}">Особистий кабінет</a>.
