--- a/carpatianknights/account/templates/registration/password_reset_complete.html
+++ b/carpatianknights/account/templates/registration/password_reset_complete.html
@@ -1,7 +1,7 @@
 {% extends "account_base.html" %}
 {% block title %}Пароль змінено{% endblock %}
 {% block account_content %}
-    <div class="container mt-5 pt-5">
+    <div class="container account-margin">
         <h2 class="text-center text-white">Пароль успішно змінено!</h2>
         <h2 class="text-center text-white">Тепер ви можете ввійти до <a class="text-white" href="{% url "login" %}">особистого кабунету</a>
         </h2>
