--- a/carpatianknights/front_end/templates/shared/_footer.html
+++ b/carpatianknights/front_end/templates/shared/_footer.html
@@ -1,3 +1,3 @@
 <footer>
-    <p class="text-white">2014 - {% now "Y" %} - Всі права збережені. Жека Трап знову недокодив.</p>
+    <p class="text-white">2014 - {% now "Y" %} - Всі права збережені.</p>
 </footer>
